# black-box-iqa

./: README.md
code/: .gitlab-ci.yml  .gitmodules
code/methods/: ci.yml
code/methods/diff-evolve-uap/: run.py  train.py
code/methods/frame-rs/: run.py
code/methods/grad-est/: run.py
code/methods/grad-est-uap/: train.py
code/methods/l0-rs/: run.py
code/methods/msin-clahe/: run.py
code/methods/msin-gamma/: run.py
code/methods/msin-gamma-unsharp/: run.py
code/methods/msin-tonemap/: run.py
code/methods/noattack/: run.py
code/methods/parsimonious/: run.py
code/methods/parsimonious-uap/: train.py
code/methods/patch-rs/: run.py
code/methods/ran-et-al/: run.py
code/methods/ran-et-al-uap/: train.py
code/methods/square-attack/: run.py
code/methods/square-attack-uap/: train.py
code/methods/utils/: Dockerfile  bounds.json  evaluate.py  fgsm_evaluate.py  metrics.py  read_dataset.py  test_results.py  uap_evaluate.py
code/scripts/: attack-build.sh  attack-init.sh  attack-test.sh  methods.txt  metric-build.sh  metrics.txt  non_uap_blackbox.txt  trainable_blackbox_methods.txt  trainable_methods.txt
code/subjects/: ci.yml
code/subjects/26a-kir-baseline/: Dockerfile  config.json
code/subjects/26a-kir-corners/: Dockerfile  config.json
code/subjects/26a-kir-gradcam/: Dockerfile  config.json
code/subjects/ahiq/: test.py  (+4 more)
code/subjects/stlpips/src/: model.py  pyproject.toml  requirements.txt
code/subjects/vtamiq/: Dockerfile  config.json  download.sh  model.py  prepare.sh  pyproject.toml  test.py
code/subjects/vtamiq/patches/: vtamiq.patch
(+250 files in other folders)
