[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stlpips_pytorch"
version = "0.0.2"
authors = [
  { name="Abhijay Ghildyal", email="abhijayghildyal@gmail.com" },
]
description = "Pytorch implementation of Shift-tolerant LPIPS"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=0.4.0",
    "torchvision>=0.2.1",
    "numpy>=1.14.3",
    "scipy>=1.0.1",
    "scikit-image>=0.13.0",
    "opencv-python>=2.4.11",
    "matplotlib>=1.5.1",
    "tqdm>=4.28.1",
    "jupyter",
    "torchinfo",
    "torchsummary",
]
[project.urls]
"Homepage" = "https://github.com/abhijay9/ShiftTolerant-LPIPS/"
"Bug Tracker" = "https://github.com/abhijay9/ShiftTolerant-LPIPS/issues"
